--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   json_annotation: ^4.9.0
   flutter_bloc: ^8.1.6
   http: ^1.2.2
+  package_info_plus: ^8.0.2
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
