--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   http: ^1.2.2
   package_info_plus: ^8.0.2
   intl: ^0.19.0
+  mockito: ^5.4.4
 
 dev_dependencies:
   flutter_test:
